--- a/style.css
+++ b/style.css
@@ -10,8 +10,43 @@ ul {
   padding: 0;
 }
 
+.app-wrapper.dark {
+  background: #112d;
+  color: white;
+}
+
+.dark .list-item {
+  /*  */
+  border-color: #aaa;
+  background-color: #123;
+  color: whitesmoke;
+}
+.dark .list-item--complete {
+  border-color: cadetblue;
+  border-left-color: #7f7;
+}
+.dark .new-item__text {
+  border-color: darkgray;
+  background-color: #123;
+  color: aliceblue;
+}
+
+.dark .btn {
+  border-color: #aaa;
+  background: #1111;
+  color: wheat;
+}
+
 .app-wrapper {
-  margin: 32px auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100%;
+}
+
+.app-content {
+  margin: 12px auto;
   padding: 8px;
   max-width: 600px;
 }
@@ -64,6 +99,7 @@ ul {
   padding: .5rem;
   margin-bottom: .25rem;
   border: 1px solid black;
+  border-radius: 4px;
   transition: border ease-in-out .05s;
 }
 .new-item__text:focus {
@@ -72,22 +108,21 @@ ul {
   border-bottom-color: deepskyblue;
   border-right-color: darkorchid;
   border-left-color: deeppink;
-  border-radius: 4px;
 }
-
 
 .list-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: .5rem 1rem;
-  margin-bottom: 2px;
+  margin-bottom: 8px;
   border: 1px solid #888;
   border-radius: 2px;
   background-color: whitesmoke;
 }
 
 .list-item.list-item--complete {
+  border-color: cadetblue;
   border-left: 8px solid #5a8;
 }
 
