--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ ul {
   padding: 0;
 }
 
+p, h1, h2, h3, h4, h5, h6 {
+  margin: .5rem 0;
+}
+
 .app-wrapper.dark {
   background: #112d;
   color: white;
@@ -133,4 +137,9 @@ ul {
 }
 .list-item__checkbox {
   margin: 0 1rem;
+}
+
+
+.md-checkbox__label {
+  margin-left: .5rem
 }
