--- a/styles/dark-mode.css
+++ b/styles/dark-mode.css
@@ -3,6 +3,14 @@
   color: white;
 }
 
+.dark .new-item__text:focus {
+  border: 2px solid;
+  border-top-color: coral;
+  border-bottom-color: deepskyblue;
+  border-right-color: darkorchid;
+  border-left-color: deeppink;
+}
+
 .dark .list-item__content {
   border-color: #aaa;
   background-color: #123;
